# adv_mla_at1

./: README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py
models/: adaboost_w3c.joblib  log_reg_week1.joblib  log_reg_week2.joblib  log_reg_week3a.joblib  ohe.joblib  scaler.joblib  scaler_w2.joblib  scaler_w3a.joblib  scaler_w3b.joblib
models/best_model/: nba_draft_prediction.joblib
notebooks/: Apply_poly.ipynb  Preprocess_data.ipynb  dhawale_kritika-24587661-week1_logistic_reg.ipynb  dhawale_kritika-24587661-week2_logistic_reg.ipynb  dhawale_kritika-24587661-week3_A_logistic_reg.ipynb  dhawale_kritika-24587661-week3_B_rand_forest.ipynb  dhawale_kritika-24587661-week3_C_adaboost.ipynb  trial.ipynb
src/data/: transform_data.py
src/models/: load_model.py  predict_model.py
submission_files/: pred1_log_reg.csv  pred1_log_reg_week1.csv  pred1_log_reg_week2.csv  pred1_log_reg_week3b.csv  pred2_log_reg.csv  pred_adaboost_week3c.csv  pred_log_reg_ht_week3a.csv  pred_rand_forest_week3b.csv
