[tool.poetry]
name = "adv-mla-at1"
version = "0.1.0"
description = ""
authors = ["Kritika"]
readme = "README.md"
packages = [{include = "adv_mla_at1"}]

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "2.0.1"
scikit-learn = "1.2.2"
jupyterlab = "3.6.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
